plugins {
	id 'net.fabricmc.fabric-loom' version "1.17.20"
	id 'maven-publish'
	id "me.modmuss50.mod-publish-plugin" version "2.2.0"
}

version = "$mod_version+build.$build_number-$project.minecraft_version"
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

loom {
	accessWidenerPath = file("src/main/resources/vampirelib.accesswidener")

	runs {
		datagenClient {
			client()
			name 'Data Generation Client'
			vmArg "-Dfabric-api.datagen"
			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
			vmArg "-Dfabric-api.datagen.existing-dir=${file("src/main/resources")}"
			vmArg "-Dfabric-api.datagen.strict_validation=false"

			ideConfigGenerated = true
			runDir "build/datagen"
		}
	}
}

// Include resources generated by data generators.
sourceSets {
	main {
		resources {
			srcDirs += [
					'src/main/generated'
			]
		}
	}
}

repositories {
	mavenCentral()
	mavenLocal()
	maven { url = "https://maven.fabricmc.net" }
	maven { url = "https://maven.quiltmc.org/repository/release" }
	maven { url = "https://maven.quiltmc.org/repository/snapshot" }
	maven { url = "https://maven.parchmentmc.net/" }
	maven { url = "https://maven.terraformersmc.com/" }
	maven {
		name = "sonatype-oss-snapshots1"
		url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
		mavenContent { snapshotsOnly() }
	}
}

configurations.configureEach {
	resolutionStrategy {
		force("net.fabricmc.fabric-api:fabric-api:0.158.3+26.3")
		force("net.fabricmc:fabric-loader:0.19.5")
	}
}


dependencies {
	minecraft libs.minecraft

	implementation libs.fabric.loader

	implementation libs.fabric.api

//	implementation libs.terraformwoodapi
//	include libs.terraformwoodapi
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

java {
	withSourcesJar()
	toolchain.languageVersion = JavaLanguageVersion.of(25)
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

jar {
	from('LICENSE') {
		rename {
			"${it}_${base.archivesName.get()}"
		}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}
	repositories {
		if (project.hasProperty("siphalorMavenUser")) {
			maven {
				name = "Siphalor"
				url = "https://maven.siphalor.de/upload.php"
				credentials {
					username = siphalorMavenUser
					password = siphalorMavenPassword
				}
			}
		}
	}
}

publishMods {
	file = jar.archiveFile
	changelog = fetchChangelog()
	type = STABLE
	modLoaders.add("fabric")
	modrinth {
		projectId = "USLVyT7V"
		accessToken = mr_token
		minecraftVersionRange {
			start = "26.3"
			end = "latest"
			includeSnapshots = false
		}
	}
}

String fetchChangelog() {
	def changelogText = file('CHANGELOG.md').text
	def regexVersion = ((String) version).replace('.', '\\.').replace('+', '\\+')
	def changelogRegex = ~"###? ${regexVersion}(?: - .+)?\\n\\n(( *- .+\\n)+)"
	def matcher = changelogText =~ changelogRegex

	if (matcher.find()) {
		String changelogContent = matcher.group(1)

		def changelogLines = changelogText.split('\n')
		def linkRefRegex = ~'^\\[([A-z0-9 _\\-/+.]+)]: '
		for (int i = changelogLines.length - 1; i > 0; i--) {
			def line = changelogLines[i]
			if ((line =~ linkRefRegex).find())
				changelogContent += '\n' + line
			else break
		}

		return changelogContent
	} else {
		return null
	}
}
